# pysync

./: .gitignore  Cargo.toml  README.md  README_ZH.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
docs/: index.html  pysync.html  search.js
python/pysync/: __init__.py  __init__.pyi  actor.py  atomic.py  dict.py  group.py  py.typed
src/: actor.rs  atomic.rs  channel.rs  lib.rs  lock.rs  map.rs  pool.rs  select.rs
tests/: test_actor.py  test_atomic.py  test_bugs.py  test_channel.py  test_components_comprehensive_supplement.py  test_group.py  test_integration.py  test_issues.py  test_lock.py  test_map.py  test_perf.py  test_perf_optimizations.py  test_pool.py  test_realworld_scenarios.py  test_regression.py  test_select.py  test_type_checking.py
tests/bench/: test_perf.py
tests/concurrency/: test_concurrency_invariants.py  test_regressions.py
tests/unit/: test_actor.py  test_atomic.py  test_channel.py  test_group.py  test_lock.py  test_map.py  test_pool.py  test_select.py
tests_stress/: test_adversarial_edge_cases.py  test_death.py  test_high_quality_stress_suite.py  test_stability_deep.py
