[package]
name = "pysync"
version = "0.1.7"
edition = "2021"

[lib]
name = "_pysync"
crate-type = ["cdylib"]

[dependencies]
crossbeam-channel = "0.5.13"
parking_lot = { version = "0.12.3", features = ["arc_lock"] }

[dependencies.pyo3]
version = "0.29"
features = ["extension-module"]

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true

