[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "pysync"
version = "0.1.0"
description = "针对 Python 3.14 自由线程的高性能现代并发原语库"
requires-python = ">=3.13"
dependencies = [
    "pytest>=8.0.0",
]

[tool.maturin]
features = ["pyo3/extension-module"]
python-source = "python"
module-name = "pysync._pysync"

[tool.mypy]
python_version = "3.14"
ignore_missing_imports = true
warn_return_any = true
warn_unused_configs = true
check_untyped_defs = true
disallow_untyped_defs = false

