[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "pysync-nogil"
version = "0.1.6"
description = "High-Performance Modern Concurrency Primitives for Free-Threaded Python 3.14t (No-GIL)"
readme = "README.md"
requires-python = ">=3.14"
license = { text = "MIT" }
keywords = ["python3-14t", "free-threaded", "no-gil", "pysync", "rust", "pyo3", "lock-free", "channel", "atomic", "rwlock"]
authors = [
    { name = "Han Youkuang" }
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Rust",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Hardware :: Symmetric Multi-processing",
]
dependencies = [
    "pytest>=8.0.0",
]

[project.urls]
Homepage = "https://github.com/hanyoukuang/pysync-nogil"
Repository = "https://github.com/hanyoukuang/pysync-nogil.git"
"Bug Tracker" = "https://github.com/hanyoukuang/pysync-nogil/issues"
Documentation = "https://github.com/hanyoukuang/pysync-nogil#readme"

[tool.maturin]
features = ["pyo3/extension-module"]
python-source = "python"
module-name = "pysync._pysync"

[tool.mypy]
python_version = "3.14"
ignore_missing_imports = true
warn_return_any = true
warn_unused_configs = true
check_untyped_defs = true
disallow_untyped_defs = false
